finally... neoforge works(you might or might not see the commented out struggle)